--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,32 +1,50 @@
+// Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext {
-        // IMPORTANT: Keep your existing minSdkVersion, compileSdkVersion, targetSdkVersion here
-        minSdkVersion = 21
-        compileSdkVersion = 34 // or your current compile SDK version
-        targetSdkVersion = 34  // or your current target SDK version
+        // NOTE: The provided logs did not contain the specific error message for 'BUILD FAILED'.
+        // This fix addresses common causes related to Kotlin/Gradle version mismatches or outdated plugin configurations.
+        // Adjust these versions to be compatible with your specific React Native version and project requirements.
 
-        // !!! IMPORTANT: Ensure or update kotlinVersion to a compatible version for Gradle 8.x and AGP 8.x !!!
-        kotlinVersion = "1.9.0" // Recommended for AGP 8.2.x / 8.3.x with Gradle 8.3
+        buildToolsVersion = "34.0.0" // Update to your desired Android SDK Build Tools version
+        minSdkVersion = 21
+        compileSdkVersion = 34 // Update to your desired Android SDK Compile version
+        targetSdkVersion = 34  // Update to your desired Android SDK Target version
+
+        // Define a modern, compatible Kotlin version.
+        // For Gradle 8.x and AGP 8.x, Kotlin 1.8.x or 1.9.x are generally compatible.
+        // If issues persist, consider trying '1.8.20' or '1.8.0'.
+        kotlinVersion = "1.9.0"
+
+        // Define a compatible Android Gradle Plugin (AGP) version.
+        // For Gradle 8.3 (inferred from `caches/8.3` in the logs), AGP 8.1.x, 8.2.x, or 8.3.x are suitable.
+        // Check official compatibility matrix if needed.
+        androidGradlePluginVersion = "8.1.2"
     }
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
-        // !!! IMPORTANT: Update this line for Android Gradle Plugin (AGP) !!!
-        classpath("com.android.tools.build:gradle:8.2.2") // Compatible with Gradle 8.3
-        // !!! IMPORTANT: Ensure this line for Kotlin Gradle Plugin (KGP) and use the defined kotlinVersion !!!
+        // The Android Gradle plugin
+        classpath("com.android.tools.build:gradle:$androidGradlePluginVersion")
+        // The Kotlin Gradle plugin
         classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion")
-        // ... (keep any other existing classpath dependencies like react-native-gradle-plugin)
+        // NOTE: Do not place your application dependencies here; they belong
+        // in the individual module build.gradle files
     }
 }
 
 allprojects {
     repositories {
+        // Ensure these are present and in the correct order for dependency resolution.
+        // Jitpack is often needed for various React Native libraries.
+        maven { url( "https://www.jitpack.io" ) }
         google()
         mavenCentral()
-        // ... (keep any other repositories you might have)
     }
 }
 
-// ... (rest of your build.gradle file)
+// Clean up task. Run `./gradlew clean` from the `android` directory.
+tasks.register("clean", Delete) {
+    delete rootProject.buildDir
+}
